@@ -22,6 +22,7 @@ Additions:
    * Add window profile set/get API in elm_win
    * Add elm_sys_notify.[ch]
    * Add elm_need_elocation() and Elocation.h support with ELM_ELOCATION macro to integrate elocation.
+   * Add elm_plug signals "image,deleted" (fixed typo) and "image,resized".
 
 Improvements:
 
@@ -98,6 +99,7 @@ Fixes:
    * Fix the naviframe to not have crash even if user deletes the naviframe in the transition finished cb.
    * Fix Don't elm_transit image animation use the image preloading to avoid image flickering.
    * Fix the image to show the image right now if the image preloading is disabled.
+   * Fix typo from elm_plug signal "image.deleted", should be "image,deleted".
 
 Removals:
 
